# sudrabainiemakoni

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
examples/OneImageWorkflow/: README.md  workflow.py
examples/SampleData/: js_202106210100_zvaigznes.txt
examples/TestCommandLine/: js_202206120030_zvaigznes.txt  kam_js_202206120030_ecef.json  kam_js_202206120030_enu.json  readme.md  testSM.py
guihelpers/: README.md  __init__.py  camera_modification.py  camera_modification.ui  camera_parameters.py  camera_parameters.ui  catalog_settings_dialog.py  catalog_star_overlay.py  ciparot.py  control_point_digitizer.py  exceptions.py  flexible_spinbox.py  method_mapping.py  mplwidget.py  point_digitizer.py  qthelper.py  referencetkameru.py  residual_overlay.py  settings.py  smgui.py  smgui.ui  smhelper.py  star_digitizer.py  sudrabainie.py
notebooks/: AugstumuKarte.ipynb  AugstumuRindas.ipynb  Projicet.ipynb  Projicet_uz_citu_vietu.ipynb  README.md  ReferencetKameru.ipynb  SaulesAugstumsMakonos.ipynb  SaulesEna.ipynb
notebooks/SampleData/: js_202106210100_latlon.txt  js_202106210100_zvaigznes.txt  js_202207100100_latlon.txt  js_202207100100_zvaigznes.txt
referencing/: __init__.py  star_reference_gui.py  star_reference_gui.ui  star_reference_ui.py
scripts/: projection_animation.py
sudrabainiemakoni/: README.md  __init__.py  argumentsSM.py  calculations.py  camera.py  cameraprojections.py  cloudimage.py  cloudimage_camera.py  cv2_lens_distortion.py  georeferencedTimelapse.py  geoutils.py  labelatedge.py  lensdistortions.py  optimize_camera.py  optimize_camera_cv2.py  plots.py  prepareHeightMap.py  procesetSM.py  projection.py  savekml.py  starreference.py  utils.py  wcs_coordinate_systems.py  webmercatorimage.py
sudrabainiemakoni/calibration/: catalog_star_projection.py
